refactor: add IStreamCipher interface